--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Looking to incorporate some AI into your hack that *isn't* just a GPT wrapper? Look no further. In this guide, I’ll walk you through a simple, hands-on introduction to recommender systems, where we build a playlist recommender.\n",
+    "Looking to incorporate some AI into your hack? Look no further. In this guide, I’ll walk you through a simple, hands-on introduction to recommender systems, where we build a playlist recommender.\n",
     "\n",
     "This guide is primarily aimed at beginners, but I’ve also linked some more advanced resources at the bottom if you want to go deeper.\n",
     "\n",
